data_summary is here

--- a/praca.ipynb
+++ b/praca.ipynb
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
       "2         PEA + VF            8\n",
       "\n",
       "Słownik wyników (do dokumentu podsumowującego):\n",
-      "{'total_reports': 271, 'mechanisms': [{'name': 'asystolia', 'count': 173, 'proportion': 63.84}, {'name': 'VF', 'count': 44, 'proportion': 16.24}, {'name': 'PEA', 'count': 95, 'proportion': 35.06}, {'name': 'VF + asystolia', 'count': 20, 'proportion': None}, {'name': 'PEA + VF', 'count': 8, 'proportion': None}, {'name': 'PEA + asystolia', 'count': 30, 'proportion': None}]}\n"
+      "{'mechanisms': [{'name': 'asystolia', 'count': 173, 'proportion': 63.84}, {'name': 'VF', 'count': 44, 'proportion': 16.24}, {'name': 'PEA', 'count': 95, 'proportion': 35.06}, {'name': 'VF + asystolia', 'count': 20, 'proportion': None}, {'name': 'PEA + VF', 'count': 8, 'proportion': None}, {'name': 'PEA + asystolia', 'count': 30, 'proportion': None}]}\n"
      ]
     }
    ],
@@ -755,7 +755,6 @@
     "\n",
     "# Słownik wyników\n",
     "results_mech = {\n",
-    "    \"total_reports\": total_reports,\n",
     "    \"mechanisms\": [\n",
     "        {\"name\": mech, \"count\": count, \"proportion\": mechanism_proportions[mech]}\n",
     "        for mech, count in mechanism_counts.items()\n",
@@ -805,9 +804,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statystyki czasu:\n",
+      "{'min_time': 1.0, 'max_time': 288.0, 'mean_time': 33.72592592592593, 'median_time': 25.0, 'std_time': 31.8362014979075, 'missing_time_percentage': 50.184501845018445}\n"
+     ]
+    }
+   ],
    "source": [
     "if \"time\" in df_processed.columns:\n",
     "    df.loc[:, \"time\"] = pd.to_numeric(df_processed[\"time\"], errors=\"coerce\")\n",
@@ -815,12 +823,12 @@
     "    raise ValueError(\"The 'time' column does not exist in the DataFrame.\")\n",
     "\n",
     "# Statystyki\n",
-    "min_time = df[\"time\"].min()\n",
-    "max_time = df[\"time\"].max()\n",
-    "mean_time = df[\"time\"].mean()\n",
-    "median_time = df[\"time\"].median()\n",
-    "std_time = df[\"time\"].std()\n",
-    "missing_time_percentage = (df[\"time\"].isna().sum() / total_reports) * 100\n",
+    "min_time = float(df[\"time\"].min())\n",
+    "max_time = float(df[\"time\"].max())\n",
+    "mean_time = float(df[\"time\"].mean())\n",
+    "median_time = float(df[\"time\"].median())\n",
+    "std_time = float(df[\"time\"].std())\n",
+    "missing_time_percentage = float((df[\"time\"].isna().sum() / total_reports) * 100)\n",
     "\n",
     "# Do dokumentu podsumowującego\n",
     "time_stats = {\n",
@@ -835,7 +843,7 @@
     "time_stats_df = pd.DataFrame(list(time_stats.items()), columns=[\"Metryka\", \"Wartość\"])\n",
     "\n",
     "print(\"Statystyki czasu:\")\n",
-    "print(time_stats_df)"
+    "print(time_stats)"
    ]
   },
   {
@@ -1136,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1154,6 +1162,29 @@
       "1         VF         61.363636           38.636364          50.722222\n",
       "2        PEA         36.842105           65.263158          37.351852\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'results_summary': [{'result': 'zgon', 'count': 163, 'proportion': 60.15},\n",
+       "  {'result': 'ROSC', 'count': 112, 'proportion': 41.33}],\n",
+       " 'mechanism_dependency': [{'mechanism': 'asystolia',\n",
+       "   'rosc_percentage': 35.84,\n",
+       "   'zgon_percentage': 65.32,\n",
+       "   'avg_time': 32.14},\n",
+       "  {'mechanism': 'VF',\n",
+       "   'rosc_percentage': 61.36,\n",
+       "   'zgon_percentage': 38.64,\n",
+       "   'avg_time': 50.72},\n",
+       "  {'mechanism': 'PEA',\n",
+       "   'rosc_percentage': 36.84,\n",
+       "   'zgon_percentage': 65.26,\n",
+       "   'avg_time': 37.35}]}"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1191,12 +1222,34 @@
     "\n",
     "mechanism_dependency_df = pd.DataFrame(mechanism_dependency_data)\n",
     "\n",
-    "# Display the resulting DataFrames\n",
+    "# Tworzenie słownika dla wyników resuscytacji do dokumentu podsumowującego \n",
+    "results_resuscitation = {\n",
+    "    \"results_summary\": [\n",
+    "        {\n",
+    "            \"result\": row[\"Wynik\"],\n",
+    "            \"count\": row[\"Liczba raportów\"],\n",
+    "            \"proportion\": round(row[\"Proporcja [%]\"], 2),\n",
+    "        }\n",
+    "        for _, row in result_summary.iterrows()\n",
+    "    ],\n",
+    "    \"mechanism_dependency\": [\n",
+    "        {\n",
+    "            \"mechanism\": row[\"Mechanizm\"],\n",
+    "            \"rosc_percentage\": round(row[\"Procent ROSC (%)\"], 2),\n",
+    "            \"zgon_percentage\": round(row[\"Procent zgonów (%)\"], 2),\n",
+    "            \"avg_time\": round(row[\"Średni czas [min]\"], 2) if not pd.isna(row[\"Średni czas [min]\"]) else None,\n",
+    "        }\n",
+    "        for _, row in mechanism_dependency_df.iterrows()\n",
+    "    ],\n",
+    "}\n",
+    "\n",
+    "# Wyniki\n",
     "print(\"Wyniki resuscytacji w raportach:\")\n",
     "print(result_summary)\n",
     "\n",
     "print(\"\\nZaleznosc wyniku od mechanizmu NZK:\")\n",
-    "print(mechanism_dependency_df)"
+    "print(mechanism_dependency_df)\n",
+    "results_resuscitation"
    ]
   },
   {
@@ -1208,12 +1261,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'total reports': 271,\n",
+       " 'results_mech': {'mechanisms': [{'name': 'asystolia',\n",
+       "    'count': 173,\n",
+       "    'proportion': 63.84},\n",
+       "   {'name': 'VF', 'count': 44, 'proportion': 16.24},\n",
+       "   {'name': 'PEA', 'count': 95, 'proportion': 35.06},\n",
+       "   {'name': 'VF + asystolia', 'count': 20, 'proportion': None},\n",
+       "   {'name': 'PEA + VF', 'count': 8, 'proportion': None},\n",
+       "   {'name': 'PEA + asystolia', 'count': 30, 'proportion': None}]},\n",
+       " 'time_stats': {'min_time': np.float64(1.0),\n",
+       "  'max_time': np.float64(288.0),\n",
+       "  'mean_time': np.float64(33.72592592592593),\n",
+       "  'median_time': np.float64(25.0),\n",
+       "  'std_time': np.float64(31.8362014979075),\n",
+       "  'missing_time_percentage': np.float64(50.184501845018445)},\n",
+       " 'result_procedures': {'procedures': [{'category': 'Leki',\n",
+       "    'name': 'adrenalina',\n",
+       "    'count': 176,\n",
+       "    'proportion': 64.94,\n",
+       "    'rosc': 42.05,\n",
+       "    'zgon': 59.09},\n",
+       "   {'category': 'Leki',\n",
+       "    'name': 'inne leki',\n",
+       "    'count': 48,\n",
+       "    'proportion': 17.71,\n",
+       "    'rosc': 41.67,\n",
+       "    'zgon': 60.42},\n",
+       "   {'category': 'Leki',\n",
+       "    'name': 'bikarbonat',\n",
+       "    'count': 37,\n",
+       "    'proportion': 13.65,\n",
+       "    'rosc': 40.54,\n",
+       "    'zgon': 59.46},\n",
+       "   {'category': 'Leki',\n",
+       "    'name': 'amiodaron',\n",
+       "    'count': 12,\n",
+       "    'proportion': 4.43,\n",
+       "    'rosc': 75.0,\n",
+       "    'zgon': 25.0},\n",
+       "   {'category': 'Metodyka',\n",
+       "    'name': 'intubacja',\n",
+       "    'count': 247,\n",
+       "    'proportion': 91.14,\n",
+       "    'rosc': 40.89,\n",
+       "    'zgon': 60.73},\n",
+       "   {'category': 'Metodyka',\n",
+       "    'name': 'masaż serca',\n",
+       "    'count': 227,\n",
+       "    'proportion': 83.76,\n",
+       "    'rosc': 38.33,\n",
+       "    'zgon': 62.56},\n",
+       "   {'category': 'Metodyka',\n",
+       "    'name': 'wentylacja',\n",
+       "    'count': 90,\n",
+       "    'proportion': 33.21,\n",
+       "    'rosc': 43.33,\n",
+       "    'zgon': 57.78},\n",
+       "   {'category': 'Metodyka',\n",
+       "    'name': 'defibrylacja',\n",
+       "    'count': 49,\n",
+       "    'proportion': 18.08,\n",
+       "    'rosc': 57.14,\n",
+       "    'zgon': 42.86},\n",
+       "   {'category': 'Urządzenia',\n",
+       "    'name': 'ambu',\n",
+       "    'count': 90,\n",
+       "    'proportion': 33.21,\n",
+       "    'rosc': 43.33,\n",
+       "    'zgon': 57.78},\n",
+       "   {'category': 'Urządzenia',\n",
+       "    'name': 'lucas',\n",
+       "    'count': 61,\n",
+       "    'proportion': 22.51,\n",
+       "    'rosc': 31.15,\n",
+       "    'zgon': 68.85}],\n",
+       "  'top_3_cooccurrences': [{'cooccurrence': ('intubacja', 'masaż serca'),\n",
+       "    'count': 214},\n",
+       "   {'cooccurrence': ('intubacja', 'wentylacja'), 'count': 90},\n",
+       "   {'cooccurrence': ('masaż serca', 'wentylacja'), 'count': 85}]},\n",
+       " 'results_resuscitation': {'results_summary': [{'result': 'zgon',\n",
+       "    'count': 163,\n",
+       "    'proportion': 60.15},\n",
+       "   {'result': 'ROSC', 'count': 112, 'proportion': 41.33}],\n",
+       "  'mechanism_dependency': [{'mechanism': 'asystolia',\n",
+       "    'rosc_percentage': 35.84,\n",
+       "    'zgon_percentage': 65.32,\n",
+       "    'avg_time': 32.14},\n",
+       "   {'mechanism': 'VF',\n",
+       "    'rosc_percentage': 61.36,\n",
+       "    'zgon_percentage': 38.64,\n",
+       "    'avg_time': 50.72},\n",
+       "   {'mechanism': 'PEA',\n",
+       "    'rosc_percentage': 36.84,\n",
+       "    'zgon_percentage': 65.26,\n",
+       "    'avg_time': 37.35}]}}"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from jinja2 import Template\n",
-    "\n"
+    "\n",
+    "# Tworzenie słownika podsumowującego do dokumentu\n",
+    "data_summary = {\n",
+    "    \"total reports\": total_reports,\n",
+    "    \"results_mech\": results_mech,\n",
+    "    \"time_stats\": time_stats,\n",
+    "    \"result_procedures\": results_procedures,\n",
+    "    \"results_resuscitation\": results_resuscitation,\n",
+    "}\n",
+    "\n",
+    "data_summary"
    ]
   },
   {
