--- a/praca.ipynb
+++ b/praca.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        " 'asystolia, masaż serca, intubacja, ambu, adrenalina, zgon']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
        "[336 rows x 1 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
        "[271 rows x 4 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Słownik wyników (do dokumentu podsumowującego):\n",
+      "Słownik wyników mechanizmów NZK (do dokumentu podsumowującego):\n",
       "{'mechanisms': [{'name': 'asystolia', 'count': 173, 'proportion': 63.84}, {'name': 'VF', 'count': 44, 'proportion': 16.24}, {'name': 'PEA', 'count': 95, 'proportion': 35.06}, {'name': 'VF + asystolia', 'count': 20, 'proportion': 7.38}, {'name': 'PEA + VF', 'count': 8, 'proportion': 2.95}, {'name': 'PEA + asystolia', 'count': 30, 'proportion': 11.07}]}\n"
      ]
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -867,6 +867,18 @@
      "text": [
       "Słownik statystyk czasu (do dokumentu podsumowującego):\n",
       "{'min_time': 1.0, 'max_time': 288.0, 'mean_time': 33.73, 'median_time': 25.0, 'std_time': 31.84, 'missing_time_percentage': 50.18}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/fq/dgtg2f814958q5vs9h1kz0r40000gp/T/ipykernel_45829/1014913068.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df.loc[:, \"time\"] = pd.to_numeric(df_processed[\"time\"], errors=\"coerce\")\n"
      ]
     }
    ],
@@ -919,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1162,18 +1174,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generowanie dokumentu podsumowującego"
+    "## Podsumowanie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generowanie podsumowania raportów"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'total reports': 271,\n",
+       "{'total_reports': 271,\n",
        " 'results_mech': {'mechanisms': [{'name': 'asystolia',\n",
        "    'count': 173,\n",
        "    'proportion': 63.84},\n",
@@ -1184,10 +1203,10 @@
        "   {'name': 'PEA + asystolia', 'count': 30, 'proportion': 11.07}]},\n",
        " 'time_stats': {'min_time': 1.0,\n",
        "  'max_time': 288.0,\n",
-       "  'mean_time': 33.72592592592593,\n",
+       "  'mean_time': 33.73,\n",
        "  'median_time': 25.0,\n",
-       "  'std_time': 31.8362014979075,\n",
-       "  'missing_time_percentage': 50.184501845018445},\n",
+       "  'std_time': 31.84,\n",
+       "  'missing_time_percentage': 50.18},\n",
        " 'result_procedures': {'procedures': [{'Kategoria': 'Leki',\n",
        "    'Procedura': 'adrenalina',\n",
        "    'Wystąpienia': 176,\n",
@@ -1281,7 +1300,7 @@
        "    'avg_time': 37.35}]}}"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,7 +1308,7 @@
    "source": [
     "# Tworzenie słownika podsumowującego do dokumentu\n",
     "data_summary = {\n",
-    "    \"total reports\": total_reports,\n",
+    "    \"total_reports\": total_reports,\n",
     "    \"results_mech\": results_mech,\n",
     "    \"time_stats\": time_stats,\n",
     "    \"result_procedures\": results_procedures,\n",
@@ -1301,14 +1320,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "sh: pdflatex: command not found\n"
+     "ename": "TemplateSyntaxError",
+     "evalue": "expected token ':', got '}'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTemplateSyntaxError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/jk620/Desktop/Praca inżynierska/praca/praca_inz/praca.ipynb Cell 27\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jk620/Desktop/Praca%20in%C5%BCynierska/praca/praca_inz/praca.ipynb#X35sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m template_path \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mszablon.tex\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jk620/Desktop/Praca%20in%C5%BCynierska/praca/praca_inz/praca.ipynb#X35sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(template_path, \u001b[39m\"\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m file:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jk620/Desktop/Praca%20in%C5%BCynierska/praca/praca_inz/praca.ipynb#X35sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     template \u001b[39m=\u001b[39m Template(file\u001b[39m.\u001b[39;49mread())\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jk620/Desktop/Praca%20in%C5%BCynierska/praca/praca_inz/praca.ipynb#X35sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# Render the template with data\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jk620/Desktop/Praca%20in%C5%BCynierska/praca/praca_inz/praca.ipynb#X35sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m rendered_tex \u001b[39m=\u001b[39m template\u001b[39m.\u001b[39mrender(data\u001b[39m=\u001b[39mdata_summary)\n",
+      "File \u001b[0;32m~/Desktop/Praca inżynierska/praca/praca_inz/.venv/lib/python3.13/site-packages/jinja2/environment.py:1214\u001b[0m, in \u001b[0;36mTemplate.__new__\u001b[0;34m(cls, source, block_start_string, block_end_string, variable_start_string, variable_end_string, comment_start_string, comment_end_string, line_statement_prefix, line_comment_prefix, trim_blocks, lstrip_blocks, newline_sequence, keep_trailing_newline, extensions, optimized, undefined, finalize, autoescape, enable_async)\u001b[0m\n\u001b[1;32m   1167\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__new__\u001b[39m(\n\u001b[1;32m   1168\u001b[0m     \u001b[39mcls\u001b[39m,\n\u001b[1;32m   1169\u001b[0m     source: t\u001b[39m.\u001b[39mUnion[\u001b[39mstr\u001b[39m, nodes\u001b[39m.\u001b[39mTemplate],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1187\u001b[0m     enable_async: \u001b[39mbool\u001b[39m \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m,\n\u001b[1;32m   1188\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m t\u001b[39m.\u001b[39mAny:  \u001b[39m# it returns a `Template`, but this breaks the sphinx build...\u001b[39;00m\n\u001b[1;32m   1189\u001b[0m     env \u001b[39m=\u001b[39m get_spontaneous_environment(\n\u001b[1;32m   1190\u001b[0m         \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39menvironment_class,  \u001b[39m# type: ignore\u001b[39;00m\n\u001b[1;32m   1191\u001b[0m         block_start_string,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1212\u001b[0m         enable_async,\n\u001b[1;32m   1213\u001b[0m     )\n\u001b[0;32m-> 1214\u001b[0m     \u001b[39mreturn\u001b[39;00m env\u001b[39m.\u001b[39;49mfrom_string(source, template_class\u001b[39m=\u001b[39;49m\u001b[39mcls\u001b[39;49m)\n",
+      "File \u001b[0;32m~/Desktop/Praca inżynierska/praca/praca_inz/.venv/lib/python3.13/site-packages/jinja2/environment.py:1111\u001b[0m, in \u001b[0;36mEnvironment.from_string\u001b[0;34m(self, source, globals, template_class)\u001b[0m\n\u001b[1;32m   1109\u001b[0m gs \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmake_globals(\u001b[39mglobals\u001b[39m)\n\u001b[1;32m   1110\u001b[0m \u001b[39mcls\u001b[39m \u001b[39m=\u001b[39m template_class \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtemplate_class\n\u001b[0;32m-> 1111\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39mfrom_code(\u001b[39mself\u001b[39m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcompile(source), gs, \u001b[39mNone\u001b[39;00m)\n",
+      "File \u001b[0;32m~/Desktop/Praca inżynierska/praca/praca_inz/.venv/lib/python3.13/site-packages/jinja2/environment.py:771\u001b[0m, in \u001b[0;36mEnvironment.compile\u001b[0;34m(self, source, name, filename, raw, defer_init)\u001b[0m\n\u001b[1;32m    769\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_compile(source, filename)\n\u001b[1;32m    770\u001b[0m \u001b[39mexcept\u001b[39;00m TemplateSyntaxError:\n\u001b[0;32m--> 771\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mhandle_exception(source\u001b[39m=\u001b[39;49msource_hint)\n",
+      "File \u001b[0;32m~/Desktop/Praca inżynierska/praca/praca_inz/.venv/lib/python3.13/site-packages/jinja2/environment.py:942\u001b[0m, in \u001b[0;36mEnvironment.handle_exception\u001b[0;34m(self, source)\u001b[0m\n\u001b[1;32m    937\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Exception handling helper.  This is used internally to either raise\u001b[39;00m\n\u001b[1;32m    938\u001b[0m \u001b[39mrewritten exceptions or return a rendered traceback for the template.\u001b[39;00m\n\u001b[1;32m    939\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    940\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mdebug\u001b[39;00m \u001b[39mimport\u001b[39;00m rewrite_traceback_stack\n\u001b[0;32m--> 942\u001b[0m \u001b[39mraise\u001b[39;00m rewrite_traceback_stack(source\u001b[39m=\u001b[39msource)\n",
+      "File \u001b[0;32m<unknown>:16\u001b[0m, in \u001b[0;36mtemplate\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mTemplateSyntaxError\u001b[0m: expected token ':', got '}'"
      ]
     }
    ],
@@ -1322,7 +1350,7 @@
     "\n",
     "# Render the template with data\n",
     "rendered_tex = template.render(data=data_summary)\n",
-    "\n",
+    "print(rendered_tex)\n",
     "# Save the rendered LaTeX file\n",
     "output_tex_path = \"report_generated.tex\"\n",
     "with open(output_tex_path, \"w\") as file:\n",
@@ -1343,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.1"
   },
   "orig_nbformat": 4
  },
