--- a/praca.ipynb
+++ b/praca.ipynb
@@ -140,7 +140,7 @@
    "source": [
     "from openai import OpenAI\n",
     "\n",
-    "key = os.getenv(\"OPENAI_API_KEY\") # Klucz przechowywany jako zmienna środowiskowa\n",
+    "# Klucz przechowywany jako zmienna środowiskowa\n",
     "client = OpenAI(api_key=key) \n",
     "filepath = os.getenv(\"filepath\") # Ściezka do pliku JSON z konsultacjami takze przechowywana jako zmienna środowiskowa "
    ]
